test/conformance/chainsaw/namespaced-mutating-policies/existing/different-trigger-target/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-nmpol-dtt-target
  namespace: test-nmpol-dtt-ns
data:
  key: value
