test/conformance/chainsaw/namespaced-mutating-policies/existing/different-trigger-target/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-nmpol-dtt-ns
