test/conformance/chainsaw/namespaced-mutating-policies/existing/different-trigger-target/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: test-nmpol-dtt-trigger
  namespace: test-nmpol-dtt-ns
type: Opaque
data:
  value: aW5pdGlhbA==
