test/conformance/chainsaw/namespaced-mutating-policies/existing/different-trigger-target/configmap-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-nmpol-dtt-target
  namespace: test-nmpol-dtt-ns
  labels:
    mutated: by-trigger
